<resources>
    <string name="app_name">滚滚长江东逝水</string>
    <string name="add">+</string>
    <string name="search">查找</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="name">姓名：</string>
    <string name="gender">性别：</string>
    <string name="bornDeath">生忌：</string>
    <string name="home">籍贯：</string>
    <string name="country">国家：</string>
    <string name="star">星级：</string>
    <string name="info">详细信息：</string>
    <string name="goBack">返回</string>
    <string name="change">修改</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="suggest">请输入正确的人物姓名~</string>
    <string name="caocao_info">曹操,男,155-220,豫州沛国谯,曹操是西园八校尉之一，曾只身行刺董卓，失败后和袁绍共同联合天下诸侯讨伐董卓，后独自发展自身势力，一生中先后战胜了袁术、吕布、张绣、袁绍、刘表、张鲁、马超等割据势力，统一了北方。但是在南下讨伐江东的战役中，曹操在赤壁惨败。后来在和蜀汉的汉中争夺战中，曹操再次无功而返。曹操一生未称帝，他病死后，曹丕继位后不久称帝，追封曹操为魏武皇帝。,</string>
    <string name="guanyu_info">关羽,男,?-219,司隶河东郡解,因本处势豪倚势凌人，关羽杀之而逃难江湖。闻涿县招军破贼，特来应募。与刘备、张飞桃园结义，羽居其次。使八十二斤青龙偃月刀随刘备东征西讨。虎牢关温酒斩华雄，屯土山降汉不降曹。为报恩斩颜良、诛文丑，解曹操白马之围。后得知刘备音信，过五关斩六将，千里寻兄。刘备平定益州后，封关羽为五虎大将之首，督荆州事。羽起军攻曹，放水淹七军，威震华夏。围樊城右臂中箭，幸得华佗医治，刮骨疗伤。但未曾提防东吴袭荆州，关羽父子败走麦城，突围中被捕，不屈遭害。,</string>
    <string name="liubei_info">刘备,男,161 - 223,幽州涿郡涿,刘备，蜀汉的开国皇帝，汉景帝之子中山靖王刘胜的后代。刘备少年孤贫，以贩鞋织草席为生。黄巾起义时，刘备与关羽、张飞桃园结义，成为异姓兄弟，一同剿除黄巾，有功，任安喜县尉，不久辞官；董卓乱政之际，刘备随公孙瓒讨伐董卓，三人在虎牢关战败吕布。后诸侯割据，刘备势力弱小，经常寄人篱下，先后投靠过公孙瓒、曹操、袁绍、刘表等人，几经波折，却仍无自己的地盘。赤壁之战前夕，刘备在荆州三顾茅庐，请诸葛亮出山辅助，在赤壁之战中，联合孙权打败曹操，奠定了三分天下的基础。刘备在诸葛亮的帮助下占领荆州，不久又进兵益州，夺取汉中，建立了横跨荆益两州的政权。后关羽战死，荆州被孙权夺取，刘备大怒，于称帝后伐吴，在夷陵之战中为陆逊用火攻打得大败，不久病逝于白帝城，临终托孤于诸葛亮。,</string>
    <string name="simayi_info">司马懿,男,179 - 251,司隶河内郡温,早年任文学掾，后任主簿，是曹操帐下谋士之一，但并不出名。襄樊之战时和蒋济劝曹操勿迁都，可割江南封孙权，令其袭杀关羽，事后如他所料。后来司马懿协助曹丕代汉，出谋五路伐蜀，开始崭露头角，在曹丕病逝前成为顾命大臣。曹叡继位后，司马懿主动请命去防御魏国西部，后因蜀汉马谡的反间计一度被废，但面对诸葛亮的北伐强攻，魏国不得不再次启用司马懿，先擒孟达，后败马谡于街亭。司马懿多次败于诸葛亮，于是采用闭门不战的策略防守，直至诸葛亮病逝。后出兵平公孙渊。曹芳继位后，司马懿、曹爽共同辅政。司马懿受曹爽排挤，于是发动政变诛杀曹爽一族，自此掌握魏国大权。司马懿病逝后，魏国政权仍由其儿子把持，多年后导致晋朝代魏的发生。司马懿被后代追封为晋朝皇帝。,</string>
    <string name="sunce_info">孙策,男,175 - 200,扬州吴郡富春,父坚与荆州牧刘表攻，策时十七，与之相从。策箭射表将陈生。后坚为表将乱箭射死，策回到汉水，闻父尸在彼，乃用俘虏黄祖换之。后往淮南投袁术，深为术所爱。后策图自强，以父所留传国玉玺换术兵，术表策为折冲校尉、殄寇将军。策自此荡平东南，威震三江。破刘繇，挟死一将、喝死一将，人皆呼之为「小霸王」。又匹马于神亭与繇将太史慈酣战数百合，为众人所惊。后策平江东，迁讨逆将军，领会稽太守，封吴侯。曹公惮其强，与之结亲以安其心。后曹公与袁绍相拒于官渡，策阴欲袭许。先是，吴郡太守许贡暗发书与曹公，教徐图策，策知之，杀贡。一日，策行猎，为贡门客所刺，创甚。后又斩杀道士于吉而受其诅咒，伤重而亡，寿仅二十六岁。权称尊号，追谥策曰长沙桓王。,</string>
    <string name="sunquan_info">孙权,男,182 - 252,扬州吴郡富春,孙权19岁就继承了其兄孙策之位，力据江东，击败了黄祖。后东吴联合刘备，在赤壁大战击溃了曹操军。东吴后来又和曹操军在合肥附近鏖战，并从刘备手中夺回荆州、杀死关羽、大破刘备的讨伐军。曹丕称帝后孙权先向北方称臣，后自己建吴称帝，迁都建业。,</string>
    <string name="xunyu_info">荀彧,男,163-212,豫州颍川郡颍阴,旧从袁绍，因知袁绍终不能成大事遂与其侄荀攸投奔曹操，与曹操长谈后被称为“吾之子房也”。曹操攻打陶谦时吕布袭取了兖州，荀彧与程昱保住了三座城池。荀彧为曹操出过很多重要的战略谋划，如以兖州为基地、二虎竞食和驱虎吞狼、迎汉献帝往许都、开玄武湖练水军等等，立有大功。荀彧后为汉侍中、尚书令，参与国家大事並经常留守许都。袁绍势力强大，曹操对是否与他开战而犹豫不决，荀彧就用四胜四败之说开导曹操，使他终下决心抗袁。官渡之战筹划粮草供给及回信坚定了曹操的意志，最后得已击败袁绍统一中原，这都是荀彧的计划。时董昭劝曹操称魏公，荀彧表示反对，曹操深感不满，遂将其招入军中，从征孙权。荀彧因病留于寿春，不久在曹操的暗示下服毒自杀。,</string>
    <string name="zhangfei_info">张飞,男,? - 221,幽州涿郡,与刘备和关羽桃园结义，张飞居第三。随刘备征讨黄巾，刘备终因功被朝廷受予平原相，后张飞鞭挞欲受赂的督邮。十八路诸侯讨董时，三英战吕布，其勇为世人所知。曹操以二虎竞食之计迫刘备讨袁术，刘备以张飞守徐州，诫禁酒，但还是因此而鞭打曹豹招致吕布东袭。刘备反曹后，反用劫寨计擒曹将刘岱，为刘备所赞。徐州终为曹操所破，张飞与刘备失散，占据古城。误以为降汉的关羽投敌，差点一矛将其杀掉。曹操降荊州后引骑追击，刘备败逃，张飞引二十余骑，立马于长阪桥，吓退曹军数十里。庞统死后刘备召其入蜀，张飞率军沿江而上，智擒巴郡太守严颜并生获之，张飞壮而释放。于葭萌关和马超战至夜间，双方点灯，终大战数百回合。瓦口关之战时扮作醉酒，智破张郃。后封为蜀汉五虎大将。及关羽卒，张飞悲痛万分，每日饮酒鞭打部下，导致为帐下将张达、范强所杀，他们持其首顺流而奔孙权。,</string>
    <string name="zhouyu_info">周瑜,男,175 - 210,扬州庐江郡舒,偏将军、南郡太守。自幼与孙策交好，策离袁术讨江东，瑜引兵从之。为中郎将，孙策相待甚厚，又同娶二乔。策临终，嘱弟权曰：“外事不决，可问周瑜”。瑜奔丧还吴，与张昭共佐权，并荐鲁肃等，掌军政大事。赤壁战前，瑜自鄱阳归。力主战曹，后于群英会戏蒋干、怒打黄盖行诈降计、后火烧曹军，大败之。后下南郡与曹仁相持，中箭负伤，与诸葛亮较智斗，定假涂灭虢等计，皆为亮破，后气死于巴陵，年三十六岁。临终，上书荐鲁肃代其位，权为其素服吊丧。,</string>
    <string name="zhugeliang_info">诸葛亮,男,181 - 234,徐州琅邪国阳都,人称卧龙先生，有经天纬地之才，鬼神不测之机。刘皇叔三顾茅庐，遂允出山相助。曾舌战群儒、借东风、智算华容、三气周瑜，辅佐刘备于赤壁之战大败曹操，更取得荆州为基本。后奉命率军入川，于定军山智激老黄忠，斩杀夏侯渊，败走曹操，夺取汉中。刘备伐吴失败，受遗诏托孤，安居平五路，七纵平蛮，六出祁山，鞠躬尽瘁，死而后已。其手摇羽扇，运筹帷幄的潇洒形象，千百年来已成为人们心中智慧的代名词。,</string>
</resources>