<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.messenger.cuber.androidstudymidproject.InfoActivity">

    <Spinner
        android:id="@+id/avatarSpinner"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="10dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/avatarSpinner"
        app:layout_constraintTop_toTopOf="@id/avatarSpinner" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:paddingBottom="8dp"
        android:paddingTop="0dp"
        android:textSize="15dp"
        app:layout_constraintLeft_toRightOf="@+id/nameTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/gender"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toRightOf="@+id/genderTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEdit" />

    <TextView
        android:id="@+id/bornDeathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/bornDeath"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

    <EditText
        android:id="@+id/bornDeathEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:paddingBottom="8dp"
        android:paddingTop="0dp"
        android:textSize="15dp"
        app:layout_constraintLeft_toRightOf="@+id/bornDeathTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bornDeathTextView" />

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/home"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/bornDeathTextView"
        app:layout_constraintTop_toBottomOf="@+id/bornDeathTextView" />

    <EditText
        android:id="@+id/homeEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:paddingBottom="8dp"
        android:paddingTop="0dp"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintLeft_toRightOf="@+id/homeTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeTextView" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/country"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/homeTextView"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toRightOf="@+id/countryTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeEdit" />

    <TextView
        android:id="@+id/starTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/star"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/countryTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView" />

    <Spinner
        android:id="@+id/starSpinner"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toRightOf="@+id/starTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countrySpinner" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info"
        android:textColor="@color/colorBlack"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarSpinner" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView">

        <EditText
            android:id="@+id/infoEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="10"
            android:textSize="17dp" />
    </ScrollView>

    <Button
        android:id="@+id/addChangeBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightBlue"
        android:text="@string/goBack"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/addChangeSaveButton"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

    <Button
        android:id="@+id/addChangeSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightBlue"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/addChangeBackButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />
</android.support.constraint.ConstraintLayout>
