<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.messenger.cuber.androidstudymidproject.InfoActivity">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:src="@color/colorOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/avatarImageView"
        app:layout_constraintTop_toTopOf="@id/avatarImageView" />

    <TextView
        android:id="@+id/nameContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/nameTextView"
        app:layout_constraintTop_toTopOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/gender"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/genderContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/genderTextView"
        app:layout_constraintTop_toTopOf="@+id/genderTextView" />

    <TextView
        android:id="@+id/bornDeathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/bornDeath"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

    <TextView
        android:id="@+id/bornDeathContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/bornDeathTextView"
        app:layout_constraintTop_toTopOf="@+id/bornDeathTextView" />

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/home"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/bornDeathTextView"
        app:layout_constraintTop_toBottomOf="@+id/bornDeathTextView" />

    <TextView
        android:id="@+id/homeContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/homeTextView"
        app:layout_constraintTop_toTopOf="@+id/homeTextView" />

    <TextView
        android:id="@+id/starTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/homeTextView"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <ImageView
        android:id="@+id/starImageView"
        android:layout_width="80dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toRightOf="@+id/starTextView"
        app:layout_constraintTop_toTopOf="@+id/starTextView" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info"
        android:textColor="@color/colorBlack"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImageView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView">

        <TextView
            android:id="@+id/infoContentTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17dp" />
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/bottomGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <Button
        android:id="@+id/infoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@color/colorLightBlue"
        android:text="返回"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomGuideLine"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/infoDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@color/colorLightBlue"
        android:text="删除"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideLine"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/infoChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        android:text="修改"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideLine"
        app:layout_constraintLeft_toRightOf="@+id/infoBackButton"
        app:layout_constraintRight_toLeftOf="@+id/infoDeleteButton" />

</android.support.constraint.ConstraintLayout>
